# RoleGameCreator

./: .env.example  main.py  pyproject.toml
created_games/: alien_invasion_5p.md  alien_invasion_7p.md  mars_7p.md  moon_10p.md  ww3_20p.md
model/: Modelfile  setup.sh
src/: agents.py  crew.py  tasks.py
